added another def; cleaned up; deleted vandalism; translation tables; many translations need to be checked <hero#44536>

--- a/wiki/hero.wikitext
+++ b/wiki/hero.wikitext
@@ -1,31 +1,106 @@
-== English ==
-=== Etymology ===
+==English==
+=== tymology===
 From Greek '''hērōs'''
 
 === Noun ===
-'''hero''', plural '''[[heroes]]'''
+'''hero''' (''plural'' '''[[heroes]]''')
 
-#Role model
-#The main good male character in a work of fiction 
-#Champion
-#A large sandwich made from meats and cheeses
-#A 1998' chinese film
-#Adolf Hitler
+#A real or mythical person of great bravery who carries out extraordinary deeds.
+#A [[role model]].
+#The main male [[protagonist]] in a work of fiction.
+#A [[champion]].
+#A large sandwich made from meats and cheeses.
 
-==== Translations ====
+====Translations====
+
+'''person of great bravery'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[héros]] ''m''
+*Italian: [[eroe]] ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''role model'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''main male protagonist'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''champion'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''sandwich'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+=====Translations to be checked=====
+<!--Remove this section once all of the translations below have been moved into the tables above.-->
+
+The translations below need to be checked by native speakers and inserted into the appropriate table(s) above.  The numbering is unreliable.
+
 *Chinese: [[英雄]] (yingxiong), [[勇士]] (yongshi)
 *Czech: [[hrdina]] ''m''
 *Finnish: [[sankari]], [[päähenkilö]] (2)
-*French: [[héros]] ''m''
-*Italian: [[eroe]] ''m''
+*German: [[Held]] ''m''
 *Japanese: [[英雄]] (eiyu), [[勇者]] (yusha)
 *Slovak: [[hrdina#Slovak|hrdina]] ''m'', [[hrdinka]] ''f''
 *Swedish: [[hjälte]] ''c''
 *Russian: [[герой]] ''m''
-*German: [[Held]] ''m''
 
-=== Derived Words ===
-* [[heroic]]
-* [[heroism]]
+===Derived terms===
+*[[heroic]]
+*[[heroism]]
 
 [[pl:hero]]
