--- a/wiki/ai.wikitext
+++ b/wiki/ai.wikitext
@@ -1,7 +1,7 @@
 == Italian ==
 '''ai'''
 
-#contraction of [[a#Italian|a]] [[i#Italian|i]] ''(at the, m.pl.)''
+#contraction of [[a#Italian|a]] [[i#Italian|i]] (''at the, m.pl.'')
 
 ===Homophones===
 *[[hai#Italian|hai]]
