fmt; marked as rare; +example <permyriad#64013>

--- a/wiki/permyriad.wikitext
+++ b/wiki/permyriad.wikitext
@@ -1,2 +1,9 @@
+==English==
+===Adverb===
+'''permyriad'''
 
-One out of every ten-thousand.  One percent of a percent.
+====Variant forms====
+'''per myriad'''
+
+#(''rare'') One out of every ten thousand; one percent of one percent.
+#:''There has been a 5 permyriad rise in the price of that commodity.''
