fmt <bling bling#5485>

--- a/wiki/bling_bling.wikitext
+++ b/wiki/bling_bling.wikitext
@@ -1,2 +1,8 @@
-== [[noun]] ==
-#''Slang'', '''jewelry''', in U.S.
+==English==
+===Noun===
+'''bling bling''' (''[[uncountable]]'')
+
+====Variant forms====
+*'''bling'''
+
+#(''slang'') [[Ostentatious]] [[jewelry]]/[[jewellery]].
