changed to cross-ref to "bling bling" <bling#63990>

--- a/wiki/bling.wikitext
+++ b/wiki/bling.wikitext
@@ -1,1 +1,5 @@
-jewelry or "expensive" items strung around the nigger's neck
+==English==
+===Noun===
+'''bling''' (''[[uncountable]]'')
+
+#Same as [[bling bling]].
