+def; fmt of Norwegian translation <to whom it may concern#63984>

--- a/wiki/to_whom_it_may_concern.wikitext
+++ b/wiki/to_whom_it_may_concern.wikitext
@@ -1,3 +1,8 @@
-'''To whom it may concern'''
+==English==
+===Phrase===
+'''to whom it may concern'''
 
-[[no:Til hvem det måtte angå]]
+#Used as a [[salutation]] in a letter when the writer does not know who will read the letter.
+
+====Translations====
+*Norwegian: [[til hvem det måtte angå]]
