+moonstone variety. <adularia#64020>

--- a/wiki/adularia.wikitext
+++ b/wiki/adularia.wikitext
@@ -1,9 +1,8 @@
-
 ===Etymology===
 :Named for the type locality at Adular, Switzerland.
  
 ===Noun===
-#A variety of [[orthoclase]] [[feldspar]] found as colorless to white [[prismatic]] crystals in cavities in [[metamorphic]] [[rock]]s. 
+#A variety of [[orthoclase]] [[feldspar]] found as colorless to white [[prismatic]] crystals in cavities in [[metamorphic]] [[rock]]s. Some specimens reflect a bluish sheen along crystal faces. This phenomenon is called ''adularescence'', and adularia with this property is called ''moonstone''. (See [[sanidine]]).
 
 === Chemical composition ===
 *Potassium aluminum silicate, <math>KAlSi_3O_8</math>
