added nl, moved de, fixed typo <hero#44536>

--- a/wiki/hero.wikitext
+++ b/wiki/hero.wikitext
@@ -1,5 +1,5 @@
 ==English==
-=== tymology===
+=== Etymology===
 From Greek '''hērōs'''
 
 === Noun ===
@@ -19,7 +19,9 @@ From Greek '''hērōs'''
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Dutch: [[held]] ''m'', [[heldin]] ''f''
 *French: [[héros]] ''m''
+*German: [[Held]] ''m''
 *Italian: [[eroe]] ''m''
 |}
 | width=1% |
@@ -49,6 +51,7 @@ From Greek '''hērōs'''
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from A to I here-->
+*Dutch: [[held]] ''m'', [[hoofdrolspeler]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -93,7 +96,6 @@ The translations below need to be checked by native speakers and inserted into t
 *Chinese: [[英雄]] (yingxiong), [[勇士]] (yongshi)
 *Czech: [[hrdina]] ''m''
 *Finnish: [[sankari]], [[päähenkilö]] (2)
-*German: [[Held]] ''m''
 *Japanese: [[英雄]] (eiyu), [[勇者]] (yusha)
 *Slovak: [[hrdina#Slovak|hrdina]] ''m'', [[hrdinka]] ''f''
 *Swedish: [[hjälte]] ''c''
