added nl <to whom it may concern#63984>

--- a/wiki/to_whom_it_may_concern.wikitext
+++ b/wiki/to_whom_it_may_concern.wikitext
@@ -5,4 +5,5 @@
 #Used as a [[salutation]] in a letter when the writer does not know who will read the letter.
 
 ====Translations====
+*Dutch: [[voor wie het aanbelangt]]
 *Norwegian: [[til hvem det måtte angå]]
