sv <to whom it may concern#63984>

--- a/wiki/to_whom_it_may_concern.wikitext
+++ b/wiki/to_whom_it_may_concern.wikitext
@@ -7,3 +7,4 @@
 ====Translations====
 *Dutch: [[voor wie het aanbelangt]]
 *Norwegian: [[til hvem det måtte angå]]
+*Swedish: [[till den det vederbör]]
