--- a/wiki/hj%C3%A4lte.wikitext
+++ b/wiki/hj%C3%A4lte.wikitext
@@ -2,8 +2,8 @@
 ===Noun===
 '''hjälte'''
 
-#The main male protagonist in a work of fiction.
-#A man of great bravery.
+#The main [[male]] [[protagonist]] in a work of [[fiction]].
+#A man of great [[bravery]].
 
 {| border=1 cellspacing=0
 | bgcolor="#FFFFF0" colspan=5 align=center | '''Common'''
@@ -30,5 +30,8 @@
 | [[hjältars]]
 | [[hjältarnas]]
 |}
+
+====See also====
+*[[hjältinna]]
 
 [[sv:hjälte]]
