--- a/wiki/template.wikitext
+++ b/wiki/template.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Noun===
 '''template''' ([[templates]])
 
@@ -18,4 +19,5 @@
 *Portuguese: [[molde]] ''m''
 *Russian: [[шаблон]] ''m'' (shablon)
 *Spanish: [[plantilla]] ''f''
+*Swedish: [[mall]] ''c''
 *Czech: [[šablona]] ''f''
