--- a/wiki/reefer.wikitext
+++ b/wiki/reefer.wikitext
@@ -6,3 +6,4 @@
 
 #One who reefs; -- a name often given to midshipmen.
 #A close-fitting lacket or short coat of thick cloth.
+#(''slang'') A [[marijuana]] [[cigarette]].
