sv word <mall#62244>

--- a/wiki/mall.wikitext
+++ b/wiki/mall.wikitext
@@ -8,3 +8,41 @@
 #A heavy blow.
 #An old game played with malls or mallets and balls. See Pall-mall.
 #A place where the game of mall was played. Hence: A public walk; a level shaded walk.
+
+----
+==Swedish==
+===Noun===
+'''mall'''
+
+#[[Template]]
+
+{| border=1 cellspacing=0
+| bgcolor="#FFFFF0" colspan=5 align=center | '''gender'''
+|-
+|- bgcolor="#FFFFF0" align=center
+! rowspan=2 | 
+| colspan=2 width=105| Singular 
+| colspan=2 | Plural
+|- bgcolor="#FFFFF0" align=center
+| width=105 | ''Indefinite'' 
+| width=105 | ''Definite'' 
+| width=105 |  ''Indefinite'' 
+|  width=105 | ''Definite''
+|- align=center
+| width=105 bgcolor="#FFFFF0" | ''Nominative'' 
+| [[mall]]
+| [[mallen]]
+| [[mallar]]
+| [[mallarna]]
+|- align=center
+| width=105 bgcolor="#FFFFF0" | ''Genitive'' 
+| [[malls]]
+| [[mallens]]
+| [[mallars]]
+| [[mallarnas]]
+|}
+
+===Synonymes===
+*[[schablon]]
+
+[[sv:mall]]
