--- a/wiki/template.wikitext
+++ b/wiki/template.wikitext
@@ -19,5 +19,5 @@
 *Portuguese: [[molde]] ''m''
 *Russian: [[шаблон]] ''m'' (shablon)
 *Spanish: [[plantilla]] ''f''
-*Swedish: [[mall]] ''c'', [[schablon]] ''c''
+*Swedish: [[mall]] ''c'', [[schablon]] ''c'', [[mönster]] (''textiles'') ''n''
 *Czech: [[šablona]] ''f''
