fmt / wikify <isomer#60468>

--- a/wiki/isomer.wikitext
+++ b/wiki/isomer.wikitext
@@ -1,7 +1,5 @@
 ==English==
-
 ===Noun===
-
 '''isomer'''
 
-#A body or compound which is isomeric with another body or compound; a member of an isomeric series.
+#A body or compound which is [[isomeric]] with another body or compound; a member of an isomeric series.
