/* Translations */ balance columns <joint#55836>

--- a/wiki/joint.wikitext
+++ b/wiki/joint.wikitext
@@ -29,14 +29,14 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to M go here-->
+<!--left column-->
 *Finnish: [[nivel#Finnish|nivel]]
-*French: [[articulation#French|articulation]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from N to Z go here-->
+<!--right column-->
+*French: [[articulation#French|articulation]] ''f''
 |}
 |}
 
@@ -60,16 +60,16 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from A to M go here-->
+<!--left column-->
 *Dutch: [[gewricht]]
 *Finnish: [[nivel#Finnish|nivel]]
-*French: [[articulation#French|articulation]] ''f''
-*German: [[Gelenk]] ''n''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--languages from N to Z go here-->
+<!--right column-->
+*French: [[articulation#French|articulation]] ''f''
+*German: [[Gelenk]] ''n''
 |}
 |}
 
@@ -130,7 +130,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from N to Z go here-->
-*Spanish: porro ''m''
+*Spanish: [[porro]] ''m''
 |}
 |}
 
