--- a/wiki/%E8%B2%98.wikitext
+++ b/wiki/%E8%B2%98.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#the panther
-*# the tapir
-
+*#the [[panther]]
+*# the [[tapir]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -35,7 +34,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ばく]] (baku), [[みゃく]] (myaku)
@@ -45,9 +44,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 맥
+* '''[[Hangeul]]''': [[맥]]
 
 * '''[[Eumhun]] reading''': 
 
