--- a/wiki/Hungarian.wikitext
+++ b/wiki/Hungarian.wikitext
@@ -81,6 +81,6 @@
 
 === External links ===
 *[http://www.websters-online-dictionary.org/definition/Hungarian-english/ Hungarian - English Dictionary]: from [http://www.websters-online-dictionary.org/ Webster's Dictionary] - the Rosetta Edition.
-*[http://www.japanmagyarszotar.hu/ Hungarian - Japanese -Hungarian Dictionary (TAMINO)]
+*[http://www.japanmagyarszotar.hu/ Hungarian - Japanese Dictionary (TAMINO)]
 
 [[nl:Hungarian]]
