--- a/wiki/joint.wikitext
+++ b/wiki/joint.wikitext
@@ -3,18 +3,20 @@
 '''joint''' (''plural'' '''joints''')
 
 #The point where two components of a structure join, but are still able to rotate.
-#:''This rod is free to swing at the joint with the platform.''
+#:''This rod is free to swing at the '''joint''' with the platform.''
 #The point where two components of a structure join rigidly.
-#:''The water is leaking out of the joint between the two pipes.''
+#:''The water is leaking out of the '''joint''' between the two pipes.''
 #(''anatomy'') Any part of the body where two [[bone]]s join, in some cases allowing that part of the body to be bent or [[straighten]]ed.
+#A cut of meat. {{stub}}
+#:''Set the '''joint''' in a roasting tin and roast for the calculated cooking time.''
 #(''carpentry'') A means of joining two pieces of wood together so that they [[interlock]].
-#: ''The dovetail joint, while more difficult to make, is also quite strong.''
+#: ''The dovetail '''joint'', while more difficult to make, is also quite strong.''
 #(''slang'') A bar, nightclub or similar business.
-#: ''It was the kind of joint you wouldn't want your boss to see you in.''
+#: ''It was the kind of '''joint'' you wouldn't want your boss to see you in.''
 #(''slang, always with ''the) [[Prison]].
-#: ''I'm just trying to stay out of the joint.''
+#: ''I'm just trying to stay out of '''the joint'''.''
 #(''slang'') A [[cannabis]] [[cigarette]].
-#: ''After locking the door and closing the shades, they lit the joint.''
+#: ''After locking the door and closing the shades, they lit the '''joint'''.''
 
 ====Synonyms====
 
@@ -22,7 +24,6 @@
 *(''cannabis cigarette''): [[doobie]], [[reefer]], [[spliff]], jimmy
 
 ====Translations====
-
 
 '''point where two components join, but are able to rotate'''
 {| border=0  width=100%
