separated pronunciations for common and proper nouns; translation tables; de:, fr:, es: & it:; syn <herb#38798>

--- a/wiki/herb.wikitext
+++ b/wiki/herb.wikitext
@@ -1,14 +1,56 @@
-===Pronunciation===
-*(British, Aus) hûb, /hɜːb/, /h3:b/
-*(US) ûrb, /ɜːrb/, /3:rb/
-
+==English==
 ===Noun===
 '''herb''' (plural: [[herbs]])
 
-#[[green]], [[leaf]]y [[plant]]s, or [[part]]s thereof, used to [[flavour]] or [[season]] food
-#a [[euphemism]] for [[marijuana]]
+====Pronunciation====
+*(''British, Australian'') hûb, /hɜːb/, /h3:b/
+*(''US'') ûrb, /ɜːrb/, /3:rb/
+<!--Note: the pronunciation of the proper noun differs: see that section-->
 
-====Related terms====
+#Any [[green]], [[leaf]]y [[plant]], or [[part]]s thereof, used to [[flavour]] or [[season]] food.
+#(''[[euphemistic]] slang'') [[Marijuana]].
+
+====Synonyms====
+*(''marijuana''): [[grass]], [[weed]]
+
+====Translations====
+
+'''plant used to flavour food'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[herbe]] ''f''
+*German: [[Kraut]] ''n''
+*Italian: [[erba]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Spanish: [[hierba]] ''f''
+|}
+|}
+
+'''slang: marijuana'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: [[herbe]] ''f''
+*Italian: [[erba]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+*Spanish: [[hierba]] ''f''
+|}
+|}
+
+====Derived terms====
 *[[herbaceous]]
 *[[herbage]]
 *[[herbal]]
@@ -25,7 +67,11 @@
 ===Proper noun===
 '''Herb'''
 
-# short form of the male given name ''[[Herbert]]''
+====Pronunciation====
+*hûb, /hɜːb/, /h3:b/
+<!--Note: the pronunciation of the common noun differs: see that section-->
+
+#A short form of the male [[given name]] '''[[Herbert]]'''.
 
 ====See also====
 *[[w:herb|Wiktionary article on herbs]]
