+herb to de: entry <Kraut#53058>

--- a/wiki/Kraut.wikitext
+++ b/wiki/Kraut.wikitext
@@ -13,3 +13,4 @@ From German ''Kraut'', cabbage.
 '''Kraut''' ''n'' (''[[uncountable]]'')
 
 #[[cabbage]]
+#[[herb]] (''plant used to flavour food'')
