+herb to de: entry <Kraut#53058>

--- a/wiki/Kraut.wikitext
+++ b/wiki/Kraut.wikitext
@@ -12,5 +12,5 @@ From German ''Kraut'', cabbage.
 ===Noun===
 '''Kraut''' ''n'' (''[[uncountable]]'')
 
-#[[cabbage]]
+#[[cabbage]] (''vegetable'')
 #[[herb]] (''plant used to flavour food'')
