--- a/wiki/Botox.wikitext
+++ b/wiki/Botox.wikitext
@@ -1,6 +1,6 @@
 =={{En}}==
 ===Noun===
-# a [[toxic]] [[compound]] that causes the [[paralysis]] of [[muscle]]s, no frequently used in [[cosmetic surgery]] to [[conceal]] [[wrinkle]]s.
+# a [[toxic]] [[compound]] that causes the [[paralysis]] of [[muscle]]s, now frequently used in [[cosmetic surgery]] to [[conceal]] [[wrinkle]]s.
 
 ====See also====
 * [[Botulin toxin]]
