--- a/wiki/castling.wikitext
+++ b/wiki/castling.wikitext
@@ -22,7 +22,7 @@
 *Serbian: [[рокада]] (rokada)
 *Slovenian: [[rošada]] ''f''
 *Spanish: [[enroque]] ''m''
-*Swedish: [[Rockad]]
+*Swedish: [[rockad]]
 
 ===See also===
 *[[w:Castling|Wikipedia article on castling]]
