--- a/wiki/Botox.wikitext
+++ b/wiki/Botox.wikitext
@@ -1,5 +1,5 @@
 =={{En}}==
-===Noun===
+===Proper noun===
 # a [[toxic]] [[compound]] that causes the [[paralysis]] of [[muscle]]s, now frequently used in [[cosmetic surgery]] to [[conceal]] [[wrinkle]]s.
 
 ====See also====
