--- a/wiki/troll.wikitext
+++ b/wiki/troll.wikitext
@@ -2,7 +2,7 @@
 
 ===Etymology===
 
-*From scandinavian "troll" (supernatural being), probably related to swedish "trolla", danish "trylle" (perform magical arts)
+*From scandinavian "troll" (supernatural being), probably related to swedish "[[trolla]]", danish "[[trylle]]" (perform magical arts)
 
 ===Noun===
 
@@ -22,5 +22,53 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+*Swedish: [[troll#Swedish|troll]] ''n''
 |}
 |}
+
+
+
+----
+==Swedish==
+===Noun===
+'''troll'''
+
+#[[troll#English|troll]]
+
+{| border=1 cellspacing=0
+| bgcolor="#FFFFF0" colspan=5 align=center | '''Neuter'''
+|-
+|- bgcolor="#FFFFF0" align=center
+! rowspan=2 | 
+| colspan=2 width=105| Singular 
+| colspan=2 | Plural
+|- bgcolor="#FFFFF0" align=center
+| width=105 | ''Indefinite'' 
+| width=105 | ''Definite'' 
+| width=105 |  ''Indefinite'' 
+|  width=105 | ''Definite''
+|- align=center
+| width=105 bgcolor="#FFFFF0" | ''Nominative'' 
+| '''troll'''
+| [[trollet]]
+| '''troll'''
+| [[trollen]]
+|- align=center
+| width=105 bgcolor="#FFFFF0" | ''Genitive'' 
+| [[trolls]]
+| [[trollets]]
+| [[trolls]]
+| [[trollens]]
+|}
+
+===See also===
+*[[förtrolla]]
+*[[trolla]]
+*[[trolldom]]
+*[[trollkarl]]
+*[[trollkonst]]
+*[[trollkonstnär]]
+*[[trollkärring]]
+
+
+[[sv:troll]]
