/* Transitive verb */ arrange the swedish... <fire#6856>

--- a/wiki/fire.wikitext
+++ b/wiki/fire.wikitext
@@ -258,6 +258,7 @@ The translations below need to be checked by native speakers and inserted into t
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+*Swedish:  [[avfyra]], [[skjuta]]
 |}
 |}
 
@@ -277,6 +278,7 @@ The translations below need to be checked by native speakers and inserted into t
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+*Swedish: [[sparka]] (''informal''), [[avskeda]]
 |}
 |}
 
@@ -293,6 +295,7 @@ The translations below need to be checked by native speakers and inserted into t
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
+*Swedish: [[bränna]]
 |}
 |}
 
@@ -311,7 +314,6 @@ The translations below need to be checked by native speakers and inserted into t
 *Slovak: [[zapáliť]] (1), [[vystreliť]] (2), [[vyhodiť]] (3)
 *Slovene: [[zažgati]] (1), [[izstreliti]] (2), [[odpustiti]] (3)
 *Spanish: [[disparar]] (1), [[despedir]] (2), [[echar]] (2)
-*Swedish: [[tända]] (1), [[avfyra]] (2), [[avskeda]], [[sparka]] (informal) (3)
 
 ===Intransitive verb===
 '''to fire''' (''past tense and past participle'' '''fired''')
