fmt <run-of-the-mill#64030>

--- a/wiki/run-of-the-mill.wikitext
+++ b/wiki/run-of-the-mill.wikitext
@@ -1,1 +1,5 @@
-not special; average
+==English==
+===Adjective===
+'''run-of-the-mill''' (''no [[comparative]] or [[superlative]]'')
+
+#Not [[special]]; [[ordinary]].
