--- a/wiki/wisdom.wikitext
+++ b/wiki/wisdom.wikitext
@@ -17,7 +17,7 @@ From '''[[wise]]''' + noun of state suffix '''[[-dom]]''', equivalent to ''[[-ne
 <!--languages from A to I go here-->
 *[[Anglo-Saxon]]: [[wísdóm]] ''m''
 *Dutch: [[wijsheid]]
-*Finnish: [[viisaus]]
+*Finnish: [[:fi:viisaus|viisaus]]
 *French: [[:fr:sagesse|sagesse]]
 *German: [[:de:klugheit|klugheit]]
 *[[Hebrew]]: [[:he:חכמה|חכמה]] /hohma/
@@ -28,12 +28,12 @@ From '''[[wise]]''' + noun of state suffix '''[[-dom]]''', equivalent to ''[[-ne
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
-*Latin: [[sapientia]] ''f''
+*Latin: [[:la:sapientia|sapientia]] ''f''
 *Latvian: [[gudrība]] ''f''
-*Portuguese: [[sabedoria]]
+*Portuguese: [[:pt:sabedoria|sabedoria]]
 *[[Russian]]: [[:ru:мудрость|мудрость]] ''f'' (mudrostj)
-*Spanish: [[sabiduría]] ''f''
-*Swedish: [[visdom]] ''c''
+*Spanish: [[:es:sabiduría|sabiduría]] ''f''
+*Swedish: [[:sv:visdom|visdom]] ''c''
 |}
 |}
 
