--- a/wiki/beastmaster.wikitext
+++ b/wiki/beastmaster.wikitext
@@ -1,19 +1,15 @@
 ==English==
+===Etymology===
+From Latin ''[[bestiarius]]'', a gladiator who fought wild beasts in an amphitheater in Roman times.
 
-==Etymology==
-From Latin [[bestiarius]] : 
-gladiator who fought wild beasts in an amhitheater in Roman times.
+===Noun===
+'''beastmaster''' (''plural'' '''beastmasters''')
 
-==noun==
+#A character in video games who fights monsters and other creatures.
+#A fierce wrestler.
 
-'''beastmaster'''
-*A character in video games who fights monsters and other creatures.
-*A fierce wrestler.
-
-
-==Translation==
-
-*[[French]] : [[belluaire]] ''m''
-*[[German]] : [[Gladiator]] ''m''
-*[[Italian]] : [[gladiatore]] ''m''
-*[[Spanish]] : [[gladiador]] ''m''
+====Translations====
+*French: [[belluaire]] ''m''
+*German: [[Gladiator#German|Gladiator]] ''m''
+*Italian: [[gladiatore]] ''m''
+*Spanish: [[gladiador]] ''m''
