--- a/wiki/abigeato.wikitext
+++ b/wiki/abigeato.wikitext
@@ -1,20 +1,5 @@
-== Substantivo ==
-'''a.bi.ge.a.to''' ''masculino''
+==Portuguese==
+===Noun===
+'''abigeato''' ''m''
 
-:# [[furto]] de gado, tanto [[bovino]] quanto [[eqüino]] 
-
-     Exemplo: O abigeato é muito comum em fronteiras secas de dois países, como Brasil e Uruguai.
-
-
-
-== Sinônimo ==
-
-    * '''abacto'''
-
-== Etimologia ==
-     do latim, ''abigeatu'', do verbo ''ab agere'': [[tanger]] adiante, fustigar.
-== Traduções ==
-   espanhol: abigeato   
-   italiano: abigeato
-   inglês:   abigeat, cattle-theft
-   francês:  abigeat
+#[[cattle-theft]], [[abigeat]]
