fmt; cleaned up; corrected fr:; +genders to translations <abigeat#63999>

--- a/wiki/abigeat.wikitext
+++ b/wiki/abigeat.wikitext
@@ -1,14 +1,18 @@
-== '''Noun''' ==
-a.bi.ge.at
+==English==
+===Etymology===
+From Latin, ''[[abigeatu]]'', from the verb ''[[ab]] [[agere]]'', to drive, to whip.
 
-:# [[cattle]]-theft, [[bovine]] or [[equine]] 
-    Exemple: Abigeat is a very common crime in dry borders, like the one between Brazil and Uruguay.
+===Noun===
+'''abigeat''' (''[[uncountable]]'')
 
-== '''Etymology''' ==
-    from Latin, ''abigeatu'', from the verb ''ab agere'': to drive, to whip.
+#Theft of [[cattle]].
+#:''Abigeat is a very common crime in dry borders, like the one between Brazil and Uruguay.''
 
-== '''Translations''' ==
-  French:     abigeat   
-  Italian:    abigeato
-  Portuguese: abigeato
-  Spanish:    abigeato
+====Translations====
+*French: [[abigéat]] ''m''
+*Italian: [[abigeato#Italian|abigeato]] ''m''
+*Portuguese: [[abigeato#Portuguese|abigeato]] ''m''
+*Spanish: [[abigeato#Spanish|abigeato]] ''m''
+
+===See also===
+*[[abactor]]
