+it: & es: entries <abigeato#63993>

--- a/wiki/abigeato.wikitext
+++ b/wiki/abigeato.wikitext
@@ -1,5 +1,19 @@
+==Italian==
+===Noun===
+'''abigeato''' ''m''
+
+#[[abigeat]], [[cattle]]-[[theft]]
+
+----
 ==Portuguese==
 ===Noun===
 '''abigeato''' ''m''
 
-#[[abigeat]]
+#[[abigeat]], [[cattle]]-[[theft]]
+
+----
+==Spanish==
+===Noun===
+'''abigeato''' ''m''
+
+#[[abigeat]], [[cattle]]-[[theft]]
