--- a/wiki/ironic.wikitext
+++ b/wiki/ironic.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Adjective===
 '''ironic''' (more ironic, most ironic)
-#[[coincidental|Coincidental]] in a [[humorous]] or [[poignant]] and [[extreme]]ly [[improbable]] way.
+#Both [[coincidental|Coincidental]] and [[contradictory]] in a [[humorous]] or [[poignant]] and [[extreme]]ly [[improbable]] way.
 #:'''Examples'''
 #:*It is ironic that Einstein, who was such a [[revolutionary]] as young man, was [[reduce]]d to [[irrational]] [[denial]] of [[quantum mechanics]] in his later years.
 #:*It is ironic that Bruce Campbell cut his hand off with a [[chainsaw]] when it was [[possessed]] by a [[demon]], and then replaced his hand with the same [[chainsaw]], becoming a demon-fighting [[machine]]. ''(based on the movie ''Army of Darkness'')''
