--- a/wiki/art.wikitext
+++ b/wiki/art.wikitext
@@ -10,6 +10,7 @@ something that is pleasing to the mind
 *Basque: [[arte]]
 *Breton: [[arz]] ''m'' -où
 *Catalan: art ''f'' or ''m'' (in ''pl'' only ''f'' [[arts]])
+*Chinese(Traditional): [[藝術]]
 *Czech: [[umění]] ''n''
 *Dutch: [[kunst]] ''f''
 *Danish: [[kunst]]
