--- a/wiki/art.wikitext
+++ b/wiki/art.wikitext
@@ -4,9 +4,14 @@ From Latin '''[[ars]]''' ''m'', ''art''
 == English ==
 ===Noun===
 '''art'''
-something that is pleasing to the mind
+#Something that is pleasing to the mind.
 
 ====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
 *Basque: [[arte]]
 *Breton: [[arz]] ''m'' -où
 *Catalan: art ''f'' or ''m'' (in ''pl'' only ''f'' [[arts]])
@@ -21,6 +26,11 @@ something that is pleasing to the mind
 *Greek: [[τέχνη]] ''f'', [[επιτηδειότητα]] ''f''
 *Indonesian: [[seni]]
 *Italian: [[arte]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
 *Japanese: [[芸術]] (げいじゅつ, geijutsu)
 *Latin: [[Ars]]
 *Polish: [[sztuka]], [[umiejętność]]
@@ -29,6 +39,8 @@ something that is pleasing to the mind
 *Spanish: [[arte]] ''m''
 *Swedish: [[konst]] ''c''
 *Turkish: [[sanat]] [-tı]
+|}
+|}
 
 ====Related terms====
 *[[artful]]
