--- a/wiki/aperture.wikitext
+++ b/wiki/aperture.wikitext
@@ -3,7 +3,8 @@
 Latin [[apertura]], from [[aperire]].  See [[Aperient]].
 
 ===Pronunciation===
-IPA: [[WEAE]] /ˈæp.ɚ.tʃɚ/
+*IPA: /ˈæpətʃʊə, ˈæpətʃə/
+*IPA: [[WEAE]] /ˈæp.ɚ.tʃɚ/
 
 ===Noun===
 # An opening; an open space; a gap, cleft, or chasm; a passage perforated; a hole; as, an aperture in a wall.
