--- a/wiki/troll.wikitext
+++ b/wiki/troll.wikitext
@@ -1,16 +1,16 @@
 ==English==
-
 ===Etymology===
-
-*From scandinavian "troll" (supernatural being), probably related to swedish "[[trolla]]", danish "[[trylle]]" (perform magical arts)
+From [[Scandinavian]] ''troll'', supernatural being; probably related to Swedish ''[[trolla]]'' and Danish ''[[trylle]]'', to perform magical arts.
 
 ===Noun===
-
-'''troll'''
+'''troll''' (''plural'' '''trolls''')
 
 #A supernatural being, often represented as of diminutive size, but sometimes as a giant, and fabled to inhabit caves, hills, and like places; a witch.
+#(''Internet'') A [[posting]] to a [[newsgroup]], [[bulletin board]], etc, that is deliberately intended to [[anger]] other [[poster]]s and cause [[argument]]s.
 
 ====Translations====
+
+'''supernatural being'''
 {| border=0 width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -22,18 +22,31 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from J to Z go here-->
-*Swedish: [[troll#Swedish|troll]] ''n''
+*Swedish: troll ''n''
 |}
 |}
 
+'''posting to a newsgroup'''
 
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
 
 ----
 ==Swedish==
 ===Noun===
 '''troll'''
 
-#[[troll#English|troll]]
+#troll (''supernatural being'')
 
 {| border=1 cellspacing=0
 | bgcolor="#FFFFF0" colspan=5 align=center | '''Neuter'''
@@ -61,7 +74,7 @@
 | [[trollens]]
 |}
 
-===See also===
+===Derived terms===
 *[[förtrolla]]
 *[[trolla]]
 *[[trolldom]]
@@ -69,6 +82,5 @@
 *[[trollkonst]]
 *[[trollkonstnär]]
 *[[trollkärring]]
-
 
 [[sv:troll]]
