--- a/wiki/domo.wikitext
+++ b/wiki/domo.wikitext
@@ -1,3 +1,9 @@
+==Esperanto==
+===Noun===
+Konstruajxo en kiu oni logxas
+#[[house]]
+
+
 ==Romanica==
 ===Noun===
 '''domo''' ''m'', '''casa''' ''f''
