fmt; more defs needed; more der; +fr: & gr: for verb <art#4363>

--- a/wiki/art.wikitext
+++ b/wiki/art.wikitext
@@ -1,12 +1,15 @@
 ===Etymology===
-From Latin '''[[ars]]''' ''m'', ''art''
+From Latin ''[[ars]]'', art
 
 == English ==
 ===Noun===
-'''art'''
+'''art''' (''[[uncountable]]'')
 #Something that is pleasing to the mind.
+<!--more definitions needed-->
 
 ====Translations====
+
+'''something pleasing to the mind'''
 {| border=0 width=100%
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -14,8 +17,8 @@ From Latin '''[[ars]]''' ''m'', ''art''
 <!--languages from A to I go here-->
 *Basque: [[arte]]
 *Breton: [[arz]] ''m'' -où
-*Catalan: art ''f'' or ''m'' (in ''pl'' only ''f'' [[arts]])
-*Chinese(Traditional): [[藝術]]
+*Catalan: art ''f m'' (''in plural only f'')
+*Chinese, Traditional: [[藝術]]
 *Czech: [[umění]] ''n''
 *Dutch: [[kunst]] ''f''
 *Danish: [[kunst]]
@@ -32,7 +35,7 @@ From Latin '''[[ars]]''' ''m'', ''art''
 {|
 <!--languages from J to Z go here-->
 *Japanese: [[芸術]] (げいじゅつ, geijutsu)
-*Latin: [[Ars]]
+*Latin: [[ars]]
 *Polish: [[sztuka]], [[umiejętność]]
 *Portuguese: [[arte]] ''f''
 *Slovak: [[umenie#Slovak|umenie]] ''n''
@@ -42,47 +45,55 @@ From Latin '''[[ars]]''' ''m'', ''art''
 |}
 |}
 
-====Related terms====
+====Derived terms====
 *[[artful]]
 *[[artist]]
 *[[artistic]]
+*[[arts and crafts]]
 *[[artsy]]
 *[[artsy-craftsy]]
+*[[black arts]]
 
-=== Verb ===
+===Intransitive verb form===
 '''art'''
-# (''archaic'') second person singular of to [[be]]
-#: ''How great thou art!''
+
+#(''archaic'') Second-person singular of '''to [[be]]'''.
+#:''How great thou art!''
 
 ==== Translations ====
 *Czech: [[jsi]], [[jseš]]
+*French: [[es#French|es]]
 *German: [[bist]]
+*Greek, Modern: [[είσαι]]
 *Italian: [[sei]]
 *Latin: [[es#Latin|es]]
 *Slovak: [[si#Slovak|si]]
 *Spanish: [[eres]]
 
 ----
-
 == Catalan ==
 === Noun ===
-'''art''' ''f, m'' (Plural: [[arts]])
+'''art''' ''f and m'' (''plural'' '''arts''' ''f'')
+
+#art (''something pleasing to the mind'')
 
 ----
 == French ==
 === Noun ===
-'''art''' ''m'' (Plural: [[arts]])
+'''art''' ''m'' (''plural'' '''arts''')
+
+#art (''something pleasing to the mind'')
 
 ----
-== German ==
-=== Noun ===
-'''die Art''' ''f''
+==German==
+===Noun===
+'''Art''' ''f''
 
-# [[kind]], [[sort]], [[type]].
+#[[kind]], [[sort]], [[type]]
 
 ----
 == Swedish ==
 ===Noun===
-'''art''' (pl. [[arter]], def. sing. [[arten]], def. pl. [[arterna]])
+'''art''' (''plural'' '''[[arter]]''', ''definite singular'' '''[[arten]]''', ''definite plural'' '''[[arterna]]''')
 
-# [[species]]
+#[[species]]
