combined defs (much the same thing); discussion of etym (based on Wikipedia article) <nerd#39022>

--- a/wiki/nerd.wikitext
+++ b/wiki/nerd.wikitext
@@ -1,22 +1,24 @@
 ==English==
+===Etymology===
+Unknown.
+*First used in [[w:Dr. Seuss|Dr. Seuss]]'s book ''If I Ran the Zoo'', 1950 as the name of an imaginary animal.
+*Possibly from Mortimer Snerd, the name of [[w:Edgar Bergen|Edgar Bergen]]'s ventriloquist dummy.
+*Possibly from the [[acronym]] N.E.R.D. on the pocket protectors of employees of the company Northern Electric Research and Developments;  it should be noted, however, that speculative etymologies based on acronyms are almost always false (such as "port out, starboard home" for "[[posh]]" and "to insure promptness" for "[[tip]]").
+*Possibly  a pronunciation of the word "[[drunk]]" spelled in reverse ("knurd"), used to mean a person who does not drink at parties - this seems somewhat contrived.
+
 ===Pronunciation===
-*nû(r)d, /nɜː(r)d/, /<tt>n3:(r)d</tt>/
+nû(r)d, /nɜː(r)d/, /<tt>n3:(r)d</tt>/
 *:[[Rhymes:English:-ɜː(r)d|Rhymes: -ɜː(r)d]]
 
 ===Noun===
 '''nerd''' (plural: [[nerds]])
 
-# (''slang'') a socially unaccepted person
-# (''slang'') one who has technical skills but lacks social skills
+# (''slang, derogatory'') A person who is technically highly skilled but lacks social skills.
 
 ====Synonyms====
-*[[dag]] (''Aus'')
-*[[dork]]
-*[[dweeb]]
-*[[geek]]
-*[[loser]]
+*(''socially unaccepted person''): (''all are slang and derogatory''):  [[dag]] (''Australian''), [[dork]], [[dweeb]], [[geek]], [[loser]]
 
-====Related terms====
+====Derived terms====
 *[[nerdy]]
 
 ====Translations====
@@ -25,6 +27,6 @@
 *Swedish: [[nörd]] ''c''
 
 ==See also==
-[http://en.wikipedia.org/wiki/Nerd Wikipedia article on Nerd]
+*[[w:nerd|Wikipedia article on nerds]]
 
 [[Category:English slang]]
