--- a/wiki/hologram.wikitext
+++ b/wiki/hologram.wikitext
@@ -3,5 +3,4 @@
 A hologram is a three dimentional image, unlike regular images which are usualy two dimentional a three dimentional image, or hologram, appears to "pop out" of the media on which it is printed or iluminated from.
 Hologram images are usualy created by using a singal laser beam which is split and splashed onto the object and finaly onto film.
 
-Erez Kalman
---[[User:212.179.103.162|212.179.103.162]] 15:37, 4 Nov 2004 (UTC)
+Erez Kalman --[[User:Kaerez|Kaerez]] 15:45, 4 Nov 2004 (UTC)
