fmt; extra def; comments on etym <posh#4961>

--- a/wiki/posh.wikitext
+++ b/wiki/posh.wikitext
@@ -1,6 +1,43 @@
-== [[adjective]] ==
-#being very stylish and expensive.
-#:''After the performance they went out to a very posh restaurant''.
-===Translations===
-*[[Dutch]]: [[chic]], [[bekakt]] (used pejoratively)
-*[[French]]: [[chic]]
+==English==
+===Etymology===
+Unknown; popularly believed to be an [[acronym]] for "port out, starboard home", describing the cabins given to upper-class passengers travelling with the Peninsular and Oriental Steam Navigation Company from Britain to India and back, although the company denies this practice.  See [http://www.worldwidewords.org/qa/qa-pos1.htm World Wide Words article on "posh"] for other theories.
+
+===Adjective===
+'''posh'''
+
+#Associated with the upper classes.
+#:''She talks with a posh accent.''
+#Stylish, elegant.
+#:''After the performance they went out to a very posh restaurant.''
+
+====Translations====
+
+'''associated with the upper classes'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
+
+'''stylish, elegant'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*Dutch: [[chic#Dutch|chic]], [[bekakt]] (''pejorative'')
+*French: [[chic#French|chic]] ''m and f'', [[élégant]] ''m'', élégante ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
