--- a/wiki/Quarzstaublungenerkrankung.wikitext
+++ b/wiki/Quarzstaublungenerkrankung.wikitext
@@ -1,1 +1,1 @@
-An extremely long, strange word I do not know the meaning of.
+Cancer of the lungs by the effect of crystalline silicon dioxide (SiO 2 ) during proven quartz dust lung illness (silicosis or Siliko Tuberkulose).
