/* Derived terms */ <raise#47449>

--- a/wiki/raise.wikitext
+++ b/wiki/raise.wikitext
@@ -15,7 +15,7 @@
 *[[lift]]
 
 ====Derived terms====
-*[[raise a glass]] (''etc'')<!-- glasses, your glasses, etc -->
+*[[I raise glasses]]
 
 ====Translations====
 *{{msg:de}}: [[heben]] (1), [[sammeln]] (2)
