fmt; corrected def (was for a verb); +syns <wordy#48903>

--- a/wiki/wordy.wikitext
+++ b/wiki/wordy.wikitext
@@ -1,4 +1,9 @@
-==[[Adjective]]==
+==English==
+===Adjective===
+'''wordy'''
 
-# To contain lots of excess words
- 'The paper was long, but very wordy.'
+#Using an excessive number of words.
+#:''The paper was long and very wordy.''
+
+====Synonyms====
+*[[verbose]]
