--- a/wiki/glurgy.wikitext
+++ b/wiki/glurgy.wikitext
@@ -2,4 +2,4 @@
 ===Adjective===
 '''glurgy''' (''[[comparative]]'' '''glurgier''', ''[[superlative]]'' '''glurgiest''')
 
-#Of the nature of [[glurge]].
+#Of the nature of [[glurge]]; sickeningly sweet.
