--- a/wiki/glurge.wikitext
+++ b/wiki/glurge.wikitext
@@ -7,5 +7,8 @@
 
 #[[Sickeningly]] sweet stories with a [[moral]], often hiding slightly sinister undertones.
 
-=== External links ===
+===Derived terms===
+*[[glurgy]]
+
+===External links===
 *[http://www.snopes.com/info/glossary.asp Glossary of terms used by the Snopes website]
