--- a/wiki/basilisk.wikitext
+++ b/wiki/basilisk.wikitext
@@ -10,6 +10,7 @@ from Middle English, from Old French [[basilisc]], from Latin [[basiliscus]], fr
 #:"The deadly look of the basilisk"
 #a type of [[lizard]] (genus Basiliscus)
 #a type of large [[brass]] [[cannon]]
+#a type of snake that was actually Lord Voldemort's giant pet snake (in Harry Potter)
 
 ====Translations====
 *Czech: [[bazilišek]] ''m''
