--- a/wiki/feel.wikitext
+++ b/wiki/feel.wikitext
@@ -1,14 +1,13 @@
 ==English==
-=== Pronunciation ===
+===Pronunciation===
 *[[w:IPA|IPA]]: /fiːl/
 
 ===Etymology===
 Old English ''felan'' 
 :[[akin]] to Old Norse ''falma'' to grope
 
-=== Verb, transitive ===
+===Transitive verb===
 '''to feel''' ([[feels]], [[felt]], [[feeling]])
-
 # To become aware of through the [[skin]]; to use the [[sense]] of [[touch]].
 # To have a [[sensation]] of something without the use of touch, [[sight]], [[hearing]], [[smell]], or [[taste]].
 # To [[find]] one's [[way]] ([[literally]] or [[figuratively]]) by touching or using cautious movements.
@@ -19,14 +18,14 @@ Old English ''felan''
 # To experience the [[consequence]]s of.
 # To [[think]], [[believe]], or have an [[impression]] concerning.
 
-==== Translations ====
-*Danish: [[føle]] (touch)
-*Dutch: [[voelen]] (touch)
-*French: [[sentir]] (to feel)
-*Indonesian: [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]], [[anggap|beranggapan]] (touch)
-*Japanese: [[感じる]] ([[かんじる]], kanjiru) (touch)
+====Translations====
+*'''Danish''': [[føle]] (touch)
+*'''Dutch''': [[voelen]] (touch)
+*'''French''': [[sentir]] (to feel)
+*'''Indonesian''': [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]], [[anggap|beranggapan]] (touch)
+*'''Japanese''': [[感じる]] ([[かんじる]], kanjiru) (touch)
 
-===Verb, intransitive===
+===Intransitive verb===
 '''to feel''' ([[feels]], [[felt]], [[feeling]])
 
 # To receive information by touch or by any [[neuron]]s other than those responsible for sight, smell, taste, or hearing.
