--- a/wiki/feel.wikitext
+++ b/wiki/feel.wikitext
@@ -19,11 +19,13 @@ Old English ''felan''
 # To [[think]], [[believe]], or have an [[impression]] concerning.
 
 ====Translations====
-*'''Danish''': [[føle]] (touch)
-*'''Dutch''': [[voelen]] (touch)
-*'''French''': [[sentir]] (to feel)
-*'''Indonesian''': [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]], [[anggap|beranggapan]] (touch)
-*'''Japanese''': [[感じる]] ([[かんじる]], kanjiru) (touch)
+*Chinese: [[触]] (chu), [[摸]] (mo), [[感知]] (ganzhi)
+*Danish: [[føle]] (touch)
+*Dutch: [[voelen]] (touch)
+*French: [[sentir]] (to feel)
+*Indonesian: [[rasa|merasa]], [[rasa|merasakan]], [[anggap|menganggap]], [[anggap|beranggap]], [[anggap|beranggapan]] (touch)
+*Italian: [[sentire]], [[sentirsi]]
+*Japanese: [[感じる]] ([[かんじる]], kanjiru)
 
 ===Intransitive verb===
 '''to feel''' ([[feels]], [[felt]], [[feeling]])
