--- a/wiki/ADA.wikitext
+++ b/wiki/ADA.wikitext
@@ -10,7 +10,6 @@
 *[[w:Ada_programming_language|Wikipedia article on the programming language Ada]]
 *[[http://en.wikibooks.org/wiki/Programming:Ada|Wikibooks Programming:Ada]]
 
-
 ----
 
 ==Balinese==
@@ -36,7 +35,13 @@
 ===Intransitive verb===
 # to be present, to be there
 
-
 ----
 ==Swedish==
 # A woman's name, quite rare.
+
+----
+==Turkish==
+===Noun===
+
+# [[island]]
+[[ja:ada]]
