--- a/wiki/hologram.wikitext
+++ b/wiki/hologram.wikitext
@@ -1,6 +1,10 @@
-'''Hologram'''
+==English==
+===Noun===
+'''hologram'''
 
-A hologram is a three dimentional image, unlike regular images which are usualy two dimentional a three dimentional image, or hologram, appears to "pop out" of the media on which it is printed or iluminated from.
-Hologram images are usualy created by using a singal laser beam which is split and splashed onto the object and finaly onto film.
+#A three dimentional image, unlike regular images which are usualy two dimentional a three dimentional image, or hologram, appears to "pop out" of the media on which it is printed or iluminated from.
+:Hologram images are usualy created by using a singal laser beam which is split and splashed onto the object and finaly onto film.
 
-Erez Kalman --[[User:Kaerez|Kaerez]] 15:45, 4 Nov 2004 (UTC)
+===Synonyms===
+*[[holograph]]
+*[[holography]]
