--- a/wiki/domo.wikitext
+++ b/wiki/domo.wikitext
@@ -3,9 +3,12 @@
 Konstruajxo en kiu oni logxas
 #[[house]]
 
-
+-----
 ==Romanica==
 ===Noun===
-'''domo''' ''m'', '''casa''' ''f''
+'''domo''' ''m''
 
 #[[house]]
+
+===Synonyms===
+[[casa]] ''f''
