--- a/wiki/medal.wikitext
+++ b/wiki/medal.wikitext
@@ -1,3 +1,4 @@
+==English==
 ===Pronunciation===
 
 '''Me*dal'''
@@ -6,88 +7,24 @@
 *SAMPA: //
 MEH-duhl
 ===Etymology===
+:from Latin ''[[metallum]]'' [[metal]]
 
 === Noun ===
 
 #A soft hard-like metal
 :'''Gold medal''' - a medal designed for first-place winners
 :'''Silver medal''' - a medal designed for second-place winners
-:'''Bronze medal''' - a medal designed for third place winners
-===Related words===
+:'''Bronze medal''' - a medal designed for third-place winners
+===Related terms===
 *[[medallion]]
-===Synomyms===
-===Antonyms===
+*[[medallist]]
+
 ====Translations====
-*Armenian:
-*Arabic:
-*Azeri:
-*Baluchi:
-*Basque:
-*Belorussian:
-*Breton:
-*Bulgarian:
-*Burmese:
-*Cambodian:
-*Catalan:
-*Coptic:
-*Czech:
-*Danish:
-*Dutch:
-*Esperanto:
-*Estonian:
-*Finnish:
 *French: [[medaille]]
-*Frisian:
-*Georgian:
 *German: [[Medaille]]
-*Greek"
-*Gujarati:
-*Hebrew:
-*Hindi:
-*Hungarian:
-*Interlingua:
-*Irish:
 *Italian: [[medale]]
-*Japanese:
-*Kashmiri:
-*Korean:
-*Kurdish:
-*Laotian:
+*Japanese: [[賞牌]], [[メダル]], [[勲章]]
 *Latin: [[medalis]]
-*Latvian:
-*Lithuanian:
-*Malayalam:
-*Malaysian:
-*Mandarin:
-*Marathi:
-*Nepalese:
-*Norwegian:
-*Occitan:
 *Polish: [[medal]]
-*Portuguese:
-*Punjab:
-*Romanian:
 *[[Romanica]]: [[medalia]] ''f''
-*Sardinian:
-*Scottish:
-*Serbian:
-*Shona:
-*Slovakian:
-*Slovene:
-*Sotho:
-*Spanish: [[medalla]]
-*Swahili:
-*Swedish:
-*Taiwanese:
-*Thai:
-*Turkish:
-*Ukrainian:
-*Urdu:
-*Uzbek:
-*Vietnamese:
-*Waloon:
-*Welsh:
-*Xhosa:
-*Yiddish:
-*Yoruba:
-*Zulu:
+**Spanish: [[medalla]]
