--- a/wiki/fantastic.wikitext
+++ b/wiki/fantastic.wikitext
@@ -1,3 +1,17 @@
-Incredibly wonderful, extraordinarily good; used especially as an intensifier. " fantastic trip to the Orient."
+==English==
+===Adjective===
+'''fantastic'''
 
-Extravagantly fanciful and unrealistic; foolish; "a fantastic idea of his own importance."
+#Incredibly [[wonderful]], extraordinarily good; used especially as an intensifier.
+#: " fantastic trip to the Orient."
+#Extravagantly fanciful and unrealistic; foolish
+#: "a fantastic idea of his own importance."
+
+===Synonyms===
+*[[grotesque]]
+*[[odd]]
+
+===Related terms===
+*[[fantasy]]
+*[[fantastical]]
+*[[fantasize]]
