--- a/wiki/wonderful.wikitext
+++ b/wiki/wonderful.wikitext
@@ -1,1 +1,8 @@
-Adapted to excite wonder or admiration; surprising; strange; astonishing.
+==English==
+===Adjective==
+'''wonderful'''
+
+#Adapted to excite [[wonder]] or [[admiration]]; [[surprising]]; [[strange]]; [[astonishing]].
+
+===Related terms===
+*[[wonderfully]]
