--- a/wiki/skate.wikitext
+++ b/wiki/skate.wikitext
@@ -5,3 +5,12 @@
 '''skate'''
 
 #A metallic runner with a frame shaped to fit the sole of a shoe, -- made to be fastened under the foot, and used for moving rapidly on ice.
+
+==Latvian==
+
+===Noun===
+
+'''skate'''
+*[[Pronunciation guide|IPA]]:/'skatɘ/
+
+#A [[display]], an [[exhibition]], or a [[show]].
