--- a/wiki/extensible.wikitext
+++ b/wiki/extensible.wikitext
@@ -1,1 +1,2 @@
 Capable of being extended in function or form.
+In the context of software development, a class or application is extensible if it can ''easily'' be extended to perform greater or different tasks.
