--- a/wiki/skate.wikitext
+++ b/wiki/skate.wikitext
@@ -6,6 +6,17 @@
 
 #A metallic runner with a frame shaped to fit the sole of a shoe, -- made to be fastened under the foot, and used for moving rapidly on ice.
 
+====Translations====
+*Latvian: [[slida]] ''f''
+
+===Verb===
+'''skate'''
+#To move along a surface (ice or ground) using skates.
+
+====Translations====
+*Latvian: [[slidot]]
+
+
 ==Latvian==
 
 ===Noun===
