reformat, etym, derived terms <taciturn#54758>

--- a/wiki/taciturn.wikitext
+++ b/wiki/taciturn.wikitext
@@ -1,1 +1,11 @@
-''adj.'' Habitually untalkative, silent
+=={{en}}==
+
+===Etymology===
+From French ''taciturne'' or Latin ''taciturnus'', from ''tacitus'', silent (see [[tacit]]).
+
+===Adjective===
+'''taciturn'''
+#Habitually untalkative, silent
+
+===Derived terms===
+*[[taciturnity]], [[taciturnly]]
