--- a/wiki/tractable.wikitext
+++ b/wiki/tractable.wikitext
@@ -1,8 +1,7 @@
 ==English==
 
-===Verb===
+===Adjective===
 
-'''to tractable'''
 
 #Capable of being easily led, taught, or managed; docile; manageable; governable; as, tractable children; a tractable learner.
 #Capable of being handled; palpable; practicable; feasible; as, tractable measures.
