+External link to Webmineral.com <microcline#64059>

--- a/wiki/microcline.wikitext
+++ b/wiki/microcline.wikitext
@@ -25,4 +25,6 @@
 ===Related words===
 :''See'' [[Rock]], [[Mineral]], [[Pegmatite]], [[granite]]
 
+:External link [[http://webmineral.com/data/Microcline.shtml Webmineral.com]]
+
 [[Category:Mineralogy]]
