--- a/wiki/dockyard.wikitext
+++ b/wiki/dockyard.wikitext
@@ -1,3 +1,3 @@
-A [[yard]] of [[dock]]s is the same as a [[wharf]].
+A [[yard]] of [[dock]]s is the same as a [[wharf]]. Often used to describe a place where [[Ship]]s are repaired or loaded.
 
-Related terms: [[harbor]], [[marina]], [[seaport]], [[ship]].
+Related terms: [[harbor]]/[[harbour]], [[marina]], [[seaport]], [[ship]],[[dockside]].
