--- a/wiki/ship.wikitext
+++ b/wiki/ship.wikitext
@@ -4,7 +4,7 @@ From Middle English, from Old English [[scip]].
 ===Noun===
 '''ship''' ([[ships]])
 
-#A water borne [[vessel]]
+#A large, water borne [[vessel]], in contrast to a [[boat]].
 
 ====Related terms====
 *[[battleship]]
