--- a/wiki/boat.wikitext
+++ b/wiki/boat.wikitext
@@ -7,7 +7,7 @@
 === Noun ===
 '''boat''' ([[boats]])
 
-#floating construction to [[transport]] [[passengers]] and [[goods]]
+#Small floating construction to [[transport]] [[passengers]] and [[goods]]. Large boats are termed [[ship]]s
 
 ====Related terms====
 *[[boatman]]
@@ -16,6 +16,10 @@
 *[[u-boat]]
 *[[dragon boat]]
 *[[fishing boat]]
+*[[ship]]
+*[[raft]]
+*[[barge]]
+
 
 ==== Translations ====
 *[[Breton]]: [[bag]] ''f'', bigi / bagoù ''pl''
