--- a/wiki/boat.wikitext
+++ b/wiki/boat.wikitext
@@ -7,7 +7,8 @@
 === Noun ===
 '''boat''' ([[boats]])
 
-#Small floating construction to [[transport]] [[passengers]] and [[goods]]. Large boats are termed [[ship]]s
+#Small floating construction to [[transport]] [[passengers]] and [[goods]]. Large boats are termed [[ship]]s.
+#Submarines are refered to as 'boats'.
 
 ====Related terms====
 *[[boatman]]
