/* Related terms */ <boat#7377>

--- a/wiki/boat.wikitext
+++ b/wiki/boat.wikitext
@@ -14,13 +14,13 @@
 *[[boatman]]
 *[[lifeboat]]
 *[[tugboat]]
-*[[u-boat]]
+*[[u-boat]]/[[submarine]]
 *[[dragon boat]]
 *[[fishing boat]]
 *[[ship]]
 *[[raft]]
 *[[barge]]
-
+*[[yacht]]
 
 ==== Translations ====
 *[[Breton]]: [[bag]] ''f'', bigi / bagoù ''pl''
