/* Translations */ Kannada: [[ಡಚ್]] <German#1663>

--- a/wiki/German.wikitext
+++ b/wiki/German.wikitext
@@ -64,6 +64,7 @@
 *[[Interlingua]]: [[germano]]
 *Italian: [[tedesco]] ''m''
 *Japanese: [[ドイツ語]] (ドイツご, doitsugo)
+*Kannada: [[ಡಚ್]]
 *[[Malay]]: [[bahasa]] [[Jerman]]
 *Norwegian: [[tysk]]
 *[[Persian]]: [[آلماني]]  (Almani)
